# bazel_project2

./: .__atomic-writed6966a21  .bazelignore  .bazelrc  .gitignore  BUILD  LLVM.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extension.bzl  llvm_extension.bzl  pyproject.toml  repo_ext.bzl  repo_ext2.bzl  requirements_lock_3_12.txt  vcpkg_extension.bzl
.clwb/aspects/: code_generator_info.bzl
.ijwb/: .bazelproject
.ijwb/aspects/: code_generator_info.bzl  python_info.bzl
aspects_demo/: BUILD  file_count.bzl  lib.cpp  lib.h  main.cpp
building_settings_demo/: BUILD  README.md  build_settings.bzl  defs.bzl  rules.bzl
config_setting_demo/: BUILD.bazel  main.cpp
cpp_demo/: BUILD  application.bzl  link_rule.bzl  main.cpp  main2.cpp  rule.bzl
cpp_demo/src/: Animal.cpp  Animal.h  main.cpp
cpp_demo_test/: BUILD  mytest.cpp  new_rule.bzl
cpp_demo_with_link_option/: BUILD  linker_script.lds  main.c
custom_initialization_of_providers/: BUILD  example_info.bzl  rule1.bzl
extern_repo/lib_a/: MODULE.bazel
extern_repo/lib_a/sub_module/: MODULE.bazel
fastapi_demo/: BUILD.bazel
fastapi_demo/python/: BUILD.bazel  main.py  main_test.py  main_test2.py
generate_cpp_demo/: BUILD.bazel  generate_cpp.py  hello.template  hello_world.cpp  hello_world.h  main.cpp
hello_world/: BUILD  main.py  rule.bzl
java_demo/: BUILD
java_demo/src/main/java/com/example/: Greeting.java  ProjectRunner.java
java_demo/src/main/java/com/example/cmdline/: Runner.java
java_demo/src/main/java/com/example/myproject/: App.java
java_demo/src/test/java/com/example/myproject/: TestApp.java
llvm_demo/: BUILD.bazel  main.cpp
llvm_demo/lib/Dialect/Noisy/: CMakeLists.txt  NoisyDialect.cpp  NoisyDialect.h  NoisyOps.cpp  NoisyOps.h  NoisyTypes.h
mod_ext_demo/: BUILD.bazel
module_extension/: extensions.bzl
module_load/: node_setup.bzl
out_group_demo/: BUILD  README.md  myrule.bzl
override_bazel_module_demo/: main.cc
patch_demo/: BUILD.bazel  main.cc
python_bind/: BUILD  Pet.h  basic.cpp  basic.h  basic.pyi  basic_test.cpp  basic_tools.py  pybind_python.cpp  python_basic_test.py
python_bind2/: BUILD  basic.pyi  pybind_python.cpp  python_basic_test.py  python_basic_test2.py
python_bind3/: BUILD  BUILD.bazel  CustomSmartPtr.cpp  README.md  basic.pyi  pybind_custom_smart_pointer.cpp  pybind_exception.cpp  pybind_numpy.cpp  pybind_numpy.h  pybind_python.cpp  pybind_smart_pointers.cpp  python_basic_test.py  python_basic_test2.py
python_bind4/: BUILD  Dog.cpp  Dog.h  Pet.cpp  Pet.h  PetTest.cpp  PolymorphhicPet.h  XY.h  basic.h  basic.pyi  basic_test.cpp  basic_tools.py  hello_absl.cc  nanobind_python.cpp  python_basic_test.py
python_demo/: BUILD  basic.py  python_basic_test.py
repo_rule_demo/: BUILD  my_extension.bzl  my_repo.bzl
run_test_demo/: BUILD  Basic.cc.tpl  fortune.bzl  template.bzl
rust_demo/: BUILD.bazel  main.rs
rust_demo/rust_demo1/: BUILD.bazel  MODULE.bazel
rust_demo/rust_demo2/: BUILD.bazel  Cargo.toml  MODULE.bazel
rust_demo/rust_demo2/src/: lib.rs  main.rs
symbolic_macro_demo/: BUILD  miniature.bzl  my_app.cpp
zip_archive/: BUILD  OverView.md  READMD.md  rule.bzl
