#load("@rules_python//python:defs.bzl", "py_binary", "py_library")
#load("@rules_rust//rust:rust_binary.bzl", "rust_binary")
#load("@rules_rust//rust:rust_library.bzl", "rust_library")
#
#rust_library(
#    name = "my_rust_lib",
#    srcs = glob(["src/**/*.rs"]),
#    edition = "2021",
#    deps = [
#        #        "@pyo3",
#    ],
#)
#
#py_library(
#    name = "my_rust_py",
#    srcs = ["__init__.py"],
#    data = [":my_rust_lib"],  # 把 Rust 生成的 .so 文件打包
#)
#
#py_binary(
#    name = "my_rust_py2",
#    srcs = [
#        "__init__.py",
#        "my_rust_py2.py",
#    ],
#    data = [":my_rust_lib"],  # 把 Rust 生成的 .so 文件打包
#)
